# ttinv-backend-new

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  PLANNING.md  README.md  TASK.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.messaging.yml  docker-entrypoint.sh  pyproject.toml
admin/: __init__.py  auth.py  base.py
app/: main.py
app/core/connections/: base.py  cache.py  database.py  http.py  messaging.py  storage.py
app/core/dependencies/: container.py
app/core/dependencies/providers/: admin.py  auth.py  cache.py  database.py  http.py  messaging.py  storage.py
app/core/exceptions/: auth.py  base.py  handlers.py
app/core/integrations/cache/: base.py
app/core/integrations/http/: base.py
app/core/integrations/mail/: base.py
app/core/integrations/storage/: base.py
app/core/lifespan/: __init__.py  admin.py  base.py  clients.py  database.py
app/core/logging/: formatters.py  setup.py
app/core/middlewares/: docs_auth.py  logging.py
app/core/migrations/versions/: 087de33f0250_initial_migrate.py
app/core/security/: __init__.py  password.py
app/core/settings/: __init__.py  logging.py  paths.py  settings.py
app/models/: __init__.py
app/models/v1/: __init__.py  base.py  header.py  users.py
app/routes/v1/: __init__.py  header.py
app/schemas/v1/: base.py  pagination.py
app/schemas/v1/header/: __init__.py  base.py  requests.py  responses.py
app/schemas/v1/users/: __init__.py  base.py  exceptions.py  requests.py  responses.py
app/services/v1/: base.py
app/services/v1/admin/: service.py
app/services/v1/auth/: data_manager.py  service.py
app/services/v1/header/: data_manager.py  service.py
app/services/v1/users/: data_manager.py
scripts/: commands.py  lint.py  setup.bat
